--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -2,6 +2,7 @@
 +++++++++++++++++++++++++++   TEMPLATE
 */
 %btn {
+  @extend %type--button_copy;
   color: white;
   padding: 15px 32px;
   text-align: center;
@@ -15,11 +16,6 @@
   border-width: .1rem;
 }
 
-%blueText {
-  color: colour('primary');
-}
-
-
 
 
 /* ++++++++++++++++++++++++
@@ -32,13 +28,13 @@
 
 .primary.orange {
   @extend %btn;
-  background-color: colour('secondary');
+  background-color: colour('orange');
 }
 
 .primary.onColour {
   @extend %btn;
-  @extend %blueText;
   background-color: white;
+  color: colour('primary');
 }
 
 /* ++++++++++++++++++++++++
@@ -47,7 +43,7 @@
 .secondary {
   @extend %btn;
   @extend %btn_secondary;
-  @extend %blueText;
+  color: colour('primary');
   background-color: white;
   border-color: colour('primary');
 }
