--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -48,7 +48,7 @@ h4 {
 =================================== Headings
 ===================================
 */
-%type--button_copy {
+@mixin type--button_copy {
   font-weight: bold;
   font-size: 1.2rem;
 }
